...
    "study.exit.continueGame" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue Game"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Продолжить игру"
...
    "study.exit.saveAndExit" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save and Exit"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Сохранить и выйти"
...
